<resources>
    <string name="app_name">FitApp1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bmi">BmiActivity</string>
    <string name="calculate_bmi">Calculate Bmi</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="_0">0</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="title_activity_kutas">KutasActivity</string>
</resources>
